# cosmic-connect

./: .gitignore  .gitmodules  BUILD.md  Cargo.toml  Install.md  Makefile  README.md  UPSTREAM_REPORT.md  WORK_SUMMARY.md  io.github.acemythos.Connect.desktop  kdeconnect-share-stress.py  kdeconnect-stress-send.sh
graphify-out/: .graphify_analysis.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/: app.rs  lib.rs  main.rs  model.rs
src/backend/: mod.rs
src/widgets/: mod.rs
